removing "!important" keyword

--- a/_sass/minima/fastpages-darkmode.scss
+++ b/_sass/minima/fastpages-darkmode.scss
@@ -7,7 +7,7 @@ $overlay: mix($dark-grey, white, 95%);
 $overlay-light: mix($dark-grey, white, 86%);
 
 html, body, input, textarea, select, button {   
-  color: $high-emph !important;
+  color: $high-emph
   background-color: $dark-grey !important;
 }
 
