adding color to .page-content

--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -25,6 +25,7 @@ img.emoji{
         -webkit-font-smoothing: antialiased !important;
         text-rendering: optimizeLegibility !important;
         font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace !important;
+        color: rgba(234,234,234,0.38);
 }
 
 // make non-headings slightly lighter
