--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ img.emoji { display: inline !important; vertical-align: baseline !important; }
 
 .post figcaption { text-align: center; font-size: .8rem; font-style: italic; color: light-grey; }
 
-.page-content { -webkit-font-smoothing: antialiased !important; text-rendering: optimizeLegibility !important; font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace !important; color: rgba(234, 234, 234, 0.38); }
+.page-content { -webkit-font-smoothing: antialiased !important; text-rendering: optimizeLegibility !important; font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace !important; }
 
 .post-content p, .post-content li { font-size: 20px; color: #515151; }
 
